k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: demo-app
  labels:
    app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: rimap2610/web-image:v1.0-330-20240914-151826
        ports:
        - containerPort: 80

        resources:
          requests:
            memory: "236Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200"

#        volumeMounts:
#        - name: nginx-storage
#          mountPath: /usr/share/nginx/html
      
      volumes:
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc
